# Bank-Customer-Clustering-K-Modes-Clustering-

./: .travis.yml  1_notenook.ipynb  2_EDA_Unovariate.ipynb  3_EDA_Multivariate.ipynb  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
