[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer_segmentation_using_k_means_clustering"
version = "0.0.1"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "sandeep suthat", email = "ss.suthar.004@gmail.com"}
]
maintainers = [
  {name = "sandeep suthat", email = "ss.suthar.004@gmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/SandeepSuthar169/customer_segmentation_using_k_means_clustering/issues"
changelog = "https://github.com/SandeepSuthar169/customer_segmentation_using_k_means_clustering/blob/master/changelog.md"
homepage = "https://github.com/SandeepSuthar169/customer_segmentation_using_k_means_clustering"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

